Fix code block horizontal scroll position

--- a/static/css/malt.css
+++ b/static/css/malt.css
@@ -415,7 +415,6 @@ h1.article-title {
 .article-entry pre {
   margin: 0;
   background: #23241f;
-  padding: 15px 0;
   overflow: auto;
   color: #fff;
   font-size: 100%;
